# bp-turek-2012

./: README  README.md  TODO
formulare/: zadani.doc  zadani.odt
src/grass/: r.in.wms2.py  r.wms.py  wms_base.py  wms_drv.py  wms_gdal.py  wms_gdal_drv.py
src/grass/gui/wxpython/modules/: capabilities.py  ogc_services.py
src/grass/gui/wxpython/ogc_services/: base.py  wms.py
src/saga/: compilation.txt  makefile.diff
src/saga/src/modules_ostepok/: Makefile.am
src/saga/src/modules_ostepok/ostepok/: MLB_Interface.cpp  Makefile.am  wms_base.cpp  wms_capabilities.cpp  wms_gdal_drv.cpp  wms_import.cpp  wms_import.h  wms_layer.cpp  wms_xml_handlers.cpp
text/: BP.tex  listsezadanim.tex  prohlaseniapodekovani.tex  stepan-turek-bp-2012.tex
text_prace/: BP.tex
